fixing overflow settings on main branch

--- a/public/styles/sign-form-styles.css
+++ b/public/styles/sign-form-styles.css
@@ -8,7 +8,6 @@ body{
 html, body {
     margin: 0;
     height: 100%;
-    overflow: hidden
   }
 
 
